[tool.poetry]
name = "cyrtd"
version = "0.1.4"
description = ""
authors = ["Ivan Mishalkin <iamishalkin@gmail.com>"]
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.1"
taskipy = "^1.2.1"

[tool.poetry.dev-dependencies]
cython = "^0.29.13"
taskipy = "^1.1.3"
pytest = "^5.3.5"
sphinx = "^2.4.4"
toml = "^0.10.0"
sphinx_rtd_theme = "^0.4.3"


[tool.taskipy.tasks]
clear = "find cyrtd/ -type f \\( -iname \\*.c -o -iname \\*.cpp -o -iname \\*.pyd -o -iname \\*.so \\) -delete"
build = "python build.py && poetry build"
html_docs = "make html -C docs"
test =  "pytest tests"
post_build = "task clear"
post_test = "task clear"


[build-system]
requires = ["poetry>=0.12", "cython"]
build-backend = "poetry.masonry.api"
